2008-10-26  Christian Persch  <chpe@gnome.org>

	Bug 557065 – gtkcellrendererpixbuf spams console over and over with
	'could not load image' warnings

	* gtk/gtkcellrendererpixbuf.c:
	(gtk_cell_renderer_pixbuf_create_themed_pixbuf): Remove noisy
	g_warning.

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	Bug 530454 – Clarify page_nr when printing

	* gtk/gtkprintoperation.c (gtk_print_operation_class_init): Point out
	that page_nr is 0-based in the documentation.

2008-10-25  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 557315 – stale clipboard target cache

	* gtk/gtkclipboard.c (gtk_clipboard_set_contents): Remove cached
	targets. Pointed out by Evan Stade

2008-10-24  Tristan Van Berkom  <tvb@gnome.org>

	* gtk/gtkwidget.c: Added a note about GtkWidget:has-tooltip in
	the docs for GtkWidget::query-tooltip.

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmountoperation.c: The "screen" property ought to have
	type GdkScreen, not GtkWindow. Found by Cosimo Cecchi

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 556954 – gtk+/gtk/gtkrecentchooserdefault.c: mismatching
	allocation and deallocation

	* gtk/gtkrecentchooserdefault.c (remove_selected_from_list): Don't
	free a strdup'ed string by g_free. Pointed out by Daniel Marjamäki

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 556835 – gtkentry.c: variable is declared at middle of block

	* gtk/gtkentry.c (gtk_entry_copy_clipboard): Fix a C99ism pointed
	out by Kazuki Iwamoto

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 557524 – "va_end(args);" should be added into
	gtk_text_buffer_insert_with_tags_by_name( )

	* gtk/gtktextbuffer.c (gtk_text_buffer_insert_with_tags_by_name):
	Don't forget to call va_end. Pointed out by Boram Park

2008-10-23  Alexander Larsson  <alexl@redhat.com>

	Bug 528320 - Incorrect icons displayed for files with custom mimetype icons
	
        * gtk/gtkfilesystem.c:
        (_gtk_file_info_render_icon):